fix(project/home)content text-overflow and(project) the image of project cards

--- a/src/wechat/project/style.less
+++ b/src/wechat/project/style.less
@@ -58,19 +58,19 @@
       padding: 1vh 1vh;
       display: inline-block;
       .project-item {
-        width: 46vw;
-        min-height: 23vw;
-        margin: 1vw;
         display: inline-block;
+        width: 46vw;
+        height: 23vw;
+        margin: 1vw;
         color: #fff;
         font-size: 18px;
         border-radius: 2px;
-        padding: 8px 32px 0 10px;
         vertical-align: top;
-        background-size: 46vw 23vw !important;
         word-break: break-all;
-
-        position: relative;
+        padding: 8px 32px 0 10px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         i {
           position: absolute;
           top: 6px;
